part2/exer2.04/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-v1-1-svc
  namespace: uh-project
spec:
  type: ClusterIP
  selector:
    app: project-v1-1
  ports:
    - protocol: TCP
      port: 2353
      targetPort: 8080
