part2/exer2.04/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exer-2-04-ingress
  namespace: uh-project
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-v1-1-svc
            port:
              number: 2353
